--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,23 @@
 {
   "name": "Golf Primos Handicap Tracker",
   "short_name": "Golf Primos",
-  "description": "Professional handicap tracking for Golf Primos crew",
-  "start_url": "./golf-primos.html",
+  "description": "Track golf scores, handicaps, and rankings for your crew",
+  "version": "1.0.0",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#0f5132",
   "theme_color": "#0f5132",
-  "orientation": "portrait",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Crect fill='%230f5132' width='200' height='200'/%3E%3Ctext x='100' y='120' font-family='Arial Black' font-size='80' fill='%23d4af37' text-anchor='middle' font-weight='bold'%3EGP%3C/text%3E%3Ccircle cx='100' cy='160' r='8' fill='%23ffffff'/%3E%3C/svg%3E",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Crect fill='%230f5132' width='192' height='192'/%3E%3Ctext x='96' y='115' font-family='Arial Black' font-size='70' fill='%23d4af37' text-anchor='middle' font-weight='bold'%3EGP%3C/text%3E%3Ccircle cx='96' cy='150' r='8' fill='%23ffffff'/%3E%3C/svg%3E",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect fill='%230f5132' width='512' height='512'/%3E%3Ctext x='256' y='320' font-family='Arial Black' font-size='200' fill='%23d4af37' text-anchor='middle' font-weight='bold'%3EGP%3C/text%3E%3Ccircle cx='256' cy='400' r='20' fill='%23ffffff'/%3E%3C/svg%3E",
+      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect fill='%230f5132' width='512' height='512'/%3E%3Ctext x='256' y='310' font-family='Arial Black' font-size='180' fill='%23d4af37' text-anchor='middle' font-weight='bold'%3EGP%3C/text%3E%3Ccircle cx='256' cy='400' r='20' fill='%23ffffff'/%3E%3C/svg%3E",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
